app/_assets/styles/custom/pages/_page-home.scss
/* ... */
.feature-focus__content {
  h1,
  h2,
  h3,
  h4,
  h5,
  h6 {
    color: $navy;

    &:first-of-type {
      font-size: 1.625rem;
      margin-top: 0;
      padding-top: 0;
    }
  }

  p {
    margin: 0;
    margin-bottom: 2rem;
  }

  ul {
    list-style: none;
    margin: 0 0 0 1rem;
    padding: 0;

    li {
      position: relative;

      &:not(:last-of-type) {
        margin-bottom: 1rem;
      }
    }

    li:before {
      content: '■ ';
      color: $color-4;
      margin: 0 0.5rem 0 0;
      line-height: 0;
    }
  }
}

.feature-focus__diagram {
}

.feature-focus-1-wrap {
  img {
    max-width: 28.375rem;
  }
}

.feature-focus-2-wrap {
  img {
    // max-width: 18.75rem;
    // max-width: 27.3125rem;
  }
}

.feature-focus-3-wrap {
  img {
    // max-width: 18.75rem;
  }
}

// Steps -- new, uses Kongponents KTabs

.feature-focus__tabs {
  .k-tabs {
    ul {
      border-bottom: 0 !important;
      margin-bottom: 2rem !important;

      .tab-item {
        border: 2px solid transparent;
        border-radius: 21px;

        &:after {
          display: none !important;
        }

        &:focus {
          outline: none;
          // outline: 1px solid #eee;
        }

        &:hover,
        &:active {
          .tab-link {
            color: $color-9 !important;
          }
        }

        &.active {
          border-color: $color-10;

          .tab-link {
            color: $color-9 !important;
          }
        }
      }

      .tab-link.tab-link {
        height: 16px;
        padding: 0 1.1875rem;
        line-height: 1;
        font-size: 0.9rem;
        color: $color-11;
        text-align: center;
      }
    }

    .tab-container {
      outline: 0 !important;

      a {
        text-decoration: underline;
      }

      div[class*='language'] {
        background-color: $color-9;
        border: 0;
        outline: 0;
        color: #fff;
      }

      .line-numbers-wrapper,
      div[class*='language-'].line-numbers-mode:after {
        display: none;
      }

      div[class*='language-'].line-numbers-mode pre {
        padding-left: 1em;
      }

      code[class*='language-'],
      pre[class*='language-'] {
        color: #fff;
        border: 0;
      }

      .token.comment {
        font-style: normal;
        color: $color-12;
      }

      .token:not(.comment) {
        color: #fff;
      }
    }

    @media screen and (min-width: 1220px) {
      .tab-link.tab-link {
        font-size: 1.0625rem !important;
      }
    }

    @media screen and (max-width: 1023px) {
      ul {
        justify-content: center;
      }
    }

    @media screen and (max-width: 580px) {
      ul {
        display: block !important;
      }
    }
  }
}

.feature-focus__tabs {
  .feature-focus__content ul li:before {
    color: $color-13;
  }
}

// Steps (old -- currently inactive)

.steps-wrap {
  @include page-section;
  color: #fff;
  background-color: $gray-7;
  padding-top: 0;
  padding-bottom: 0;

  // the tabs themselves
  div[id*='tab-'].section {
    background-color: $color-6;
    padding: 1.8rem 0;
  }

  // Tinytabs overrides
  .tinytabs {
    .tabs {
      margin-bottom: 0;
    }

    .tab {
      position: relative;
      min-width: 9.25rem;
      height: 8.5rem;
      display: flex;
      align-items: flex-end;
      justify-content: center;
      background: none;
      border-radius: 5px 5px 0 0;
      text-align: center;
      font-size: 1.188rem;
      line-height: 1;
      padding: 1.4rem 1.625rem;
      // transition: background 150ms ease-in-out;

      > h2,
      > h3,
      > h4,
      > h5,
      > h6 {
        position: relative;
      }

      img {
        position: absolute;
        top: 42%;
        left: 50%;
        transform: translate(-50%, -50%);
        display: block;
        width: 60px;
        height: auto;
        // transition: opacity 150ms ease-in-out;
      }

      // active tab state
      &.sel {
        background-color: $color-6;

        img.tab-icon:not(.tab-icon__active) {
          opacity: 0;
        }

        img.tab-icon__active {
          opacity: 1;
        }
      }

      // inactive tab state
      &:not(.sel) {
        img.tab-icon:not(.tab-icon__active) {
          opacity: 1;
        }

        img.tab-icon__active {
          opacity: 0;
        }
      }

      // hover tab state
      &:hover:not(.sel) {
        img.tab-icon:not(.tab-icon__active) {
          opacity: 0;
        }

        img.tab-icon__active {
          opacity: 1;
        }
      }
    }
  }

  .section-header {
    margin-bottom: 4rem;
  }

  // code blocks
  div[class*='language'],
  div[class*='language-'] {
    // background-color: darken($color-6, 8);
    background-color: rgba(#000, 0.4) !important;
  }

  // hide the line numbers on code blocks
  .line-numbers-mode:after,
  .line-numbers-wrapper {
    display: none !important;
  }

  pre,
  pre[class*='language-'] {
    padding: 1rem !important;
    white-space: pre-wrap !important;
  }

  code,
  code[class*='language-'] {
    word-break: break-word !important;
  }

  a:not(.btn):not(.tab) {
    color: $green-base;

    &:hover {
      color: #fff;
      text-decoration: underline;
    }
  }
}

.steps-wrap-pre-header {
  padding-top: 2.5rem;
  padding-bottom: 2.5rem;
  text-align: center;
  color: #fff;
  background-color: $gray-7;

  .content__tabs-section-title h2 {
    margin: 0;
    font-size: 1.875rem;
    font-weight: 500;
  }
}

.steps-wrap--slim {
  // padding: 1.8rem 0;
}

.steps-items__header {
}
/* ... */

